2007-09-28  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Use g_option_context_get_help() if no flags
	are provided.

2007-07-30  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:
	
	Set printer.configured and printer.display_name properties
	on the HAL printer instead of using DBus signals.

	* patches/gnome-volume-manager-printer-notify.patch:

	Update to reflect cups-autoconfig changes.
	

2007-07-27  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Remove the migrate hal printers config option and make it
	a flag instead.

	Add the ability to autoconfigure all printers instead of
	just the printer specified by the HAL environment.  If
	the app is run without the HAL_PROP_INFO_UDI env set then
	it will attempt to autoconfigure all printers.  If the env
	is set then it will only configure the printer with that udi.

	More cleanup.

	More debugging output.

	* cups-autoconfig.spec:
	* src/Makefile.am:

	Create a symlink in libdir/hal/ to point to cups-autoconfig so
	the hal callout will actually work.

2007-07-25  Chris Rivera  <crivera@novell.com>

	* configure.in: Add checks for HAL.
	* src/cups-autoconfig.c:

	Lots of cleanup.
	
	Use IEEE 1284 ids if possible.

	Add support for using preferred backends if possible (hp, epson, etc),
	
	Add support for	migrating existing HAL backend printers to the usb
	backend.

	Cleanup the config file handling.

	Improve debugging.

2007-07-11  Chris Rivera  <crivera@novell.com>

	* Makefile.am:
	* configure.in:
	* src/cups-autoconfig.c:

	Remove the sysconfig file in favor of a normal conf file.

	* src/hal-cups-autoconfig.in:

	Remove this wrapper script and have the callout call
	cups-autoconfig directly.

2007-07-09  Chris Rivera  <crivera@novell.com>

	* Makefile.am:
	* src/hal-cups-autoconfig.in:

	Rename printers to printerconfig to fix abuild error.

2007-06-08  Chris Rivera  <crivera@novell.com>

	* configure.in:
	* src/hal-cups-autoconfig.in:
